--- a/9-conclusion.tex
+++ b/9-conclusion.tex
@@ -3,15 +3,15 @@
 
 \chapter*{General conclusions}
 
-This thesis explored various approaches to find the best nanoporous materials for adsorption-based industrial xenon/krypton separation (e.g., pressure-swing adsorption). As highlighted in the literature review,\autocite{Ren_2022} high-throughput screening methods focus on a specific property of nanoporous materials to identify the most suitable material for targeted application. Such screenings face three main challenges: (i) achieving the accuracy of the methods used to characterize the key properties, (ii) reducing the experimental/computation time required to determine those properties, and (iii) incorporating additional properties often overlooked in performance evaluation. Adsorption selectivity, commonly used to assess separation performance, is typically used in this regard.
+This thesis explored various approaches to find the best nanoporous materials for adsorption-based industrial xenon/krypton separation (e.g., pressure-swing adsorption). As highlighted in the literature review,\autocite{Ren_2022} high-throughput screening methods usually focus on a specific property of nanoporous materials to identify the most suitable material for targeted application. Such screenings face three main challenges: (i) achieving the accuracy of the methods used to characterize the key properties, (ii) reducing the experimental/computation time required to determine those properties, and (iii) incorporating additional properties often overlooked in performance evaluation. Adsorption selectivity, commonly used to assess separation performance, is typically used in this regard.
 
-Chapter 2 focused on the different methodologies used to evaluate selectivity in different physical conditions, and demonstrated how screenings can provide a realistic picture of selective materials.\autocite{Ren_2021} The influence of composition, pressure and some structural descriptors were thoroughly examined. It was found that tailoring the pore size to match the size of xenon is key in achieving maximum selectivity. The Xe/Kr separation can be approximately described by the affinity of xenon for the material, which predominantly manifests in its enthalpic nature. When the partial pressure of xenon increases, the most favorable pores for xenon adsorption become saturated, leading to an observed selectivity decrease in certain materials.
+In Chapter 2, I focused on the different methodologies used to evaluate selectivity in different physical conditions, and demonstrated how screenings can provide a realistic picture of selective materials.\autocite{Ren_2021} The influence of composition, pressure and some structural descriptors were thoroughly examined. I found that tailoring the pore size to match the size of xenon is key in achieving maximum selectivity. The Xe/Kr separation can be approximately described by the affinity of xenon for the material, which predominantly manifests in its enthalpic nature. When the partial pressure of xenon increases, the most favorable pores for xenon adsorption become saturated, leading to an observed selectivity decrease in certain materials.
  
-Considering the prominent role of the enthalpic term, Chapter 3 introduced faster sampling techniques to evaluate selectivity under infinite-dilution conditions. In addition to the widely used Widom insertion method, various biased sampling techniques such as Voronoi sampling and surface sampling (RAESS) were described. The RAESS algorithm\autocite{Ren_2023} demonstrated superior speed compared to Widom insertion and higher accuracy than the previously introduced Voronoi energy\autocite{Simon_2015} on the CoRE MOF 2019 database. Finally, an unbiased sampling approach utilizing a symmetric grid (GrAED) was introduced to generate valuable energy descriptors for the design of finely tuned energetic descriptors. The GrAED algorithm provides interesting descriptors that can be further used, for instance, in an ML modeling. These techniques can be incorporated into a multiscale screening to efficiently identify promising materials for more time-consuming calculations or experiments.
+Considering the prominent role of the enthalpic term, in Chapter 3 I introduced faster sampling techniques to evaluate selectivity under infinite-dilution conditions. In addition to the widely used Widom insertion method, various biased sampling techniques such as Voronoi sampling and surface sampling (RAESS) were described. The RAESS algorithm\autocite{Ren_2023} demonstrated superior speed compared to Widom insertion and higher accuracy than the previously introduced Voronoi energy\autocite{Simon_2015} on the CoRE MOF 2019 database. Finally, an unbiased sampling approach utilizing a symmetric grid (GrAED) was introduced to generate valuable energy descriptors for the design of finely tuned energetic descriptors. The GrAED algorithm provides interesting descriptors that can be further used, for instance, in an ML modeling. These techniques can be incorporated into a multiscale screening to efficiently identify promising materials for more time-consuming calculations or experiments.
 
-Chapter 4 proposed an ML model based on structural, chemical, and energetic descriptors to achieve GCMC-level accuracy combined with a speed comparable to faster low-dilution calculations.\autocite{Ren_2023_ml} This ML model demonstrated high accuracy and enabled GCMC-grade evaluations to be obtained with minimal computational resources. Importantly, the interpretation of this ML model offered novel approaches for investigating the structure-property relationship beyond conventional correlation analyses.
+In Chapter 4, I proposed an ML model based on structural, chemical, and energetic descriptors to achieve GCMC-level accuracy combined with a speed comparable to faster low-dilution calculations.\autocite{Ren_2023_ml} This ML model demonstrated high accuracy and enabled GCMC-grade evaluations to be obtained with minimal computational resources. Importantly, the interpretation of this ML model offered novel approaches for investigating the structure-property relationship beyond conventional correlation analyses.
 
-To date, extensive research has focused on investigating thermodynamic properties computed using relatively simplistic assumptions through multiple correlation analysis and the development of various performance evaluation tools. To encompass different key properties, the transport properties were studied in Chapter 5. Different methodologies were investigated, including: (i) molecular dynamics, which represents the most physically accurate but also the slowest method, requiring simulations of at least a few tens of nanoseconds to capture the diffusion process accurately; (ii) transition state-based methodologies that approximate the diffusion process by hopping from one site to another; (iii) an ML-based approach that uses descriptors based on activation energies (transition state theory) to predict the diffusion coefficient. By leveraging these calculated transport properties, the screening process successfully identified selective materials without kinetic limitations (that also happen to have high xenon capacity). This outcome validates the multivariate nature of the screening process, as such materials have the potential to significantly enhance productivity, yield a greater output during each pressure-swing cycle and enable faster cycles (in a PSA process). 
+To date, extensive research has focused on investigating thermodynamic properties computed using relatively simplistic assumptions through multiple correlation analysis and the development of various performance evaluation tools. To encompass different key properties, I studied the transport properties in Chapter 5. Different methodologies were investigated, including: (i) molecular dynamics, which represents the most physically accurate but also the slowest method, requiring simulations of at least a few tens of nanoseconds to capture the diffusion process accurately; (ii) transition state-based methodologies that approximate the diffusion process by hopping from one site to another; (iii) an ML-based approach that uses descriptors based on activation energies (transition state theory) to predict the diffusion coefficient. By leveraging these calculated transport properties, the screening process successfully identified selective materials without kinetic limitations (that also happen to have high xenon capacity). This outcome validates the multivariate nature of the screening process, as such materials have the potential to significantly enhance productivity, yield a greater output during each pressure-swing cycle and enable faster cycles (in a PSA process). 
 
 The final chapter provides prospects for future research studies regarding additional physical properties of materials that have been overlooked throughout this thesis. These properties include the flexibility of the material and the interactions induced by charged atoms or polar groups. By incorporating the polarization effect into the screening process, it becomes possible to identify materials with significantly higher experimental selectivity, as suggested by the characteristics of recently identified top-performing materials for Xe/Kr separation.\autocite{Li_2019,Pei_2022} Furthermore, the flexibility of the material can potentially provide insights into theory--experiment discrepancies that would otherwise remain unresolved, thus highlighting the importance of employing more accurate descriptions through flexibility-aware molecular simulations.
 
@@ -23,7 +23,7 @@ The final chapter provides prospects for future research studies regarding addit
 
 This work paves the way for more efficient screening strategies aimed at investigating separation properties under diverse physical and chemical conditions. Moreover, the novel tools developed in this thesis can readily facilitate the integration of transport properties into future screening for gas separation involving nanoporous materials. By combining these tools with the emerging concept of Digital Reticular Chemistry,\autocite{Lyu_2020} new possibilities for material design and discovery can be envisioned.
 
-The methodologies developed in this thesis also enable the integration of understudied properties that have a key role in the industrial process of xenon/krypton separation. By integrating the faster methods introduced throughout this thesis, it becomes feasible to consider physical phenomena that are typically overlooked in the screening procedure. The faster sampling of adsorption energies can serve as a foundation for modeling flexible materials using a snapshot approach, as demonstrated by Witman et al.\autocite{Witman_2017}. The evaluation of induced energy\autocite{Lachet_1998} can also be integrated into the evaluation tools used throughout this thesis. 
+The methodologies developed in this thesis also enable the integration of understudied properties that have a key role in the industrial process of xenon/krypton separation. By integrating the faster methods introduced throughout this thesis, it becomes feasible to consider physical phenomena that are typically overlooked in the screening procedure. The faster sampling of adsorption energies can serve as a foundation for modeling flexible materials using a snapshot approach, as demonstrated by Witman et al.\autocite{Witman_2017} The evaluation of induced energy\autocite{Lachet_1998} can also be integrated into the evaluation tools used throughout this thesis. 
 
 
 
