--- a/Z-resume-fr.tex
+++ b/Z-resume-fr.tex
@@ -32,14 +32,13 @@ La quantité de matériaux est potentiellement infinie, rien que pour les \emph{
 
 En premier lieu, mes travaux ont porté sur l'analyse poussée des corrélations qu'il pouvait exister entre les différentes grandeurs thermodynamiques décrivant la séparation xénon/krypton. Pour cela, mes travaux se basent sur la base de données CoRE MOF 2019 pour comparer les différentes grandeurs thermodynamiques grâce à des analyses de corrélation. Différentes conditions de pression et de composition ont été étudiées et des explications physiques à l'échelle microscopique sont proposées pour comprendre l'origine des différences observées. 
 
-Pour commencer, j'ai étudié les corrélations entre l'enthalpie et la sélectivité. Sur la figure~\ref{fgr:histo_H_resume}, l'enthalpie d'adsorption du xénon est assez bien corrélée au logarithme de la sélectivité à basse pression suggérant ainsi que l'affinité du xénon avec le matériau peut expliquer la sélectivité. Cette corrélation diminue cependant pour les matériaux moins sélectifs. Les matériaux les plus sélectifs ont en effet des pores dont la taille est très favorable à l'adsorption du xénon comme le suggèrent d'autres études. Pour des gaz nobles, seules les interactions de Van der Waals jouent un rôle important, ainsi la taille des pores permettent d'expliquer en grande partie l'affinité comparée entre deux molécules de tailles différentes le xénon et le krypton. Ainsi, dans des matériaux avec de petits pores, les phénomènes sont dominés par les interactions entre les pores et l'adsorbat, c'est-à-dire par l'enthalpie. Alors que dans de larges pores, les effets entropiques jouent un rôle plus important.
+Pour commencer, j'ai étudié les corrélations entre l'enthalpie et la sélectivité. Sur la figure~\ref{fgr:histo_H_resume}, l'enthalpie d'adsorption du xénon est assez bien corrélée au logarithme de la sélectivité à basse pression suggérant ainsi que l'affinité du xénon avec le matériau peut expliquer la sélectivité. Cette corrélation diminue cependant pour les matériaux moins sélectifs. Les matériaux les plus sélectifs ont en effet des pores dont la taille est très favorable à l'adsorption du xénon comme le suggèrent d'autres études. Pour des gaz nobles, seules les interactions de van der Waals jouent un rôle important, ainsi la taille des pores permettent d'expliquer en grande partie l'affinité comparée entre deux molécules de tailles différentes le xénon et le krypton. Ainsi, dans des matériaux avec de petits pores, les phénomènes sont dominés par les interactions entre les pores et l'adsorbat, c'est-à-dire par l'enthalpie. Alors que dans de larges pores, les effets entropiques jouent un rôle plus important.
 
 \begin{figure}[h]
 \begin{minipage}[t]{.43\textwidth}
 \centering
   \includegraphics[width=\linewidth]{figures/2-thermo/Enthalpy_0_log.jpg}
-  \caption{\small{\ Pour 8\,401 MOFs avec une sélectivité Xe/Kr favorable ($s\e{0} > 1$), pair-plots entre les différentes grandeurs $\log(s\e{0})$, $\Delta\e{exc}H\e{0}$, $\Delta\e{ads}H\ex{Xe}\e{0}$ et $\Delta\e{ads}H\ex{Kr}\e{0}$ (les enthalpies sont en \si{\kilo\joule\per\mol}) en dehors de la diagonale et la distribution de chaque grandeur sur la diagonale.}}
-  \label{fgr:histo_H_resume}
+  \caption{\small{\ Pour 8\,401 MOFs avec une sélectivité Xe/Kr favorable ($s\e{0} > 1$), pair-plots entre les différentes grandeurs $\log(s\e{0})$, $\Delta\e{exc}H\e{0}$, $\Delta\e{ads}H\ex{Xe}\e{0}$ et $\Delta\e{ads}H\ex{Kr}\e{0}$ (les enthalpies sont en \si{\kilo\joule\per\mol}) en dehors de la diagonale et la distribution de chaque grandeur sur la diagonale.}}\label{fgr:histo_H_resume}
 \end{minipage}
 \hfill
 \begin{minipage}[t]{.5\textwidth}
