--- a/0-intro.tex
+++ b/0-intro.tex
@@ -5,13 +5,13 @@
 \pagenumbering{arabic}
 
 % separation in general
-Industrial gas separation processes are widely used for supplying purified reactants and inert gases for various industries such as chemical, health, agricultural and food industries. They can also be utilized to mitigate the negative environmental impact of certain industrial activities. For instance, in concrete or steel production factories, the highly problematic \ce{CO2} emissions can be separated from other atmospheric gases and captured. Similarly, in nuclear treatment plants, volatile radioactive compounds (e.g., $^{85}$Kr) can be captured through an effective separation. Typically, these processes involve the consideration of different small molecules such as nitrogen, oxygen, carbon dioxide, hydrogen, methane, nitrous oxide, and noble gases. The focus of this thesis is on the xenon/krypton separation, which is commonly performed to extract xenon and krypton from the atmosphere,\autocite{kerry2007industrial} although the nuclear industry constitutes a more abundant source of noble gases.\autocite{Banerjee_2014}
+Industrial gas separation processes are widely used for supplying purified reactants and inert gases for various industries such as chemical, health, agricultural and food industries. They can also be utilized to mitigate the negative environmental impact of certain industrial activities. For instance, in concrete or steel production factories, the highly problematic \ce{CO2} emissions can be separated from other atmospheric gases and captured. Similarly, in nuclear treatment plants, volatile radioactive compounds (e.g., $^{85}$Kr) can be captured through an effective separation. Typically, these processes involve the consideration of different small molecules such as nitrogen, oxygen, carbon dioxide, hydrogen, methane, nitrous oxide, and noble gases. The focus of my thesis is on the xenon/krypton separation, which is commonly performed to extract xenon and krypton from the atmosphere,\autocite{kerry2007industrial} although the nuclear industry constitutes a more abundant source of noble gases.\autocite{Banerjee_2014}
 
 % nanoporous
-In the industry, Xe/Kr separation is usually based on cryogenic distillation of liquified atmospheric air, which requires significant energy, heavy infrastructures, and a meticulous hazard management. The hazardousness of the process is underscored by the occurrence of recent industrial accidents (1997), which resulted from the reaction between non-filtered hydrocarbons and purified liquid oxygen.\autocite{distill_accident,distill_accident2} To address security concerns and reduce installation and operational costs of the gas separation process, researchers are actively exploring a promising technology based on competitive adsorption on nanoporous materials. These materials consist of nanoscale pores that provide a large surface area for molecular interaction and adherence. Industrial adsorption separation commonly utilizes pressure swing adsorption (PSA) --- the pores are loaded with a gas mixture at high pressure and the gas is subsequently released by applying lower pressure. If the material preferentially loads a single type of molecules, the composition of the released gas can exhibit a significantly higher content of those molecules, hence achieving gradual separation. In this thesis, the xenon/krypton separation is identified as the most challenging step in the purification of xenon, given their chemical similarities. To address this challenge, some prototypes utilizing beds of nanoporous materials have been developed for xenon/krypton separation.\autocite{Banerjee2018}
+In the industry, Xe/Kr separation is usually based on cryogenic distillation of liquified atmospheric air, which requires significant energy, heavy infrastructure, and meticulous hazard management. The hazardousness of the process is underscored by the occurrence of recent industrial accidents (1997), which resulted from the reaction between non-filtered hydrocarbons and purified liquid oxygen.\autocite{distill_accident,distill_accident2} To address security concerns and reduce installation and operational costs of the gas separation process, researchers are actively exploring a promising technology based on competitive adsorption in nanoporous materials. These materials consist of nanoscale pores that provide a large surface area for molecular interaction and adherence. Industrial adsorption separation commonly uses pressure swing adsorption (PSA) --- the pores are loaded with a gas mixture at high pressure and the gas is subsequently released by applying lower pressure. If the material preferentially loads a single type of molecule, the composition of the released gas can exhibit a significantly higher content of those molecules, hence achieving gradual separation. In this thesis, the xenon/krypton separation is identified as the most challenging step in the purification of xenon, given their chemical similarity. To address this challenge, some prototypes relying on beds of nanoporous materials have been developed for xenon/krypton separation.\autocite{Banerjee2018}
 
 % computation
-For the process to be viable, materials need to demonstrate improved performance, and numerous studies focus on synthesizing increasingly selective materials by leveraging chemical insights into noble gas adsorption properties.\autocite{Chen_2014, Li_2019, Pei_2022} Computational screening plays a crucial role in accelerating the discovery of novel materials with key properties, allowing for the identification of factors that contribute to their performance and the pre-selection of candidates for further experimental studies. The combination of computational discovery and experimental validation, as recently conceptualized by Lyu et al., offers a synergistic workflow to advance material discovery.\autocite{Lyu_2020, Jablonka_2022} However, computational chemists face two major challenges in effectively guiding experimental discoveries: generating a greater number of structures reliably and evaluating them using fast and accurate models. This work will primarily focus on the development of tools to address the latter challenge.
+For the process to be viable, materials need to demonstrate improved performance, and numerous studies focus on synthesizing increasingly selective materials by leveraging chemical insight into noble gas adsorption properties.\autocite{Chen_2014, Li_2019, Pei_2022} Computational screening plays a crucial role in accelerating the discovery of novel materials with key properties, allowing for the identification of factors that contribute to their performance and the pre-selection of candidates for further experimental studies. The combination of computational discovery and experimental validation, as recently conceptualized by Lyu et al., offers a synergistic workflow to advance material discovery.\autocite{Lyu_2020, Jablonka_2022} However, computational chemists face two major challenges in effectively guiding experimental discoveries: generating a greater number of structures reliably and evaluating them using fast and accurate models. This work will primarily focus on the development of tools to address the latter challenge.
 
 The number of nanoporous materials is potentially unlimited; for the metal--organic frameworks (MOFs) alone, over 90,000 structures have been synthesized\autocite{Groom_2016} and 500,000 structures have been digitally constructed\autocite{Wilmer_2012,Boyd_2016,Colon_2017}. To efficiently handle this ever-increasing quantity of structures, researchers are developing screening strategies for identifying the best materials, while gaining chemical intuition about the characteristics favorable to a high separation performance. Some studies focus on a multistep screening strategy,\autocite{Wilmer_2012,Qiao_2016,Yang_2020} while others use machine learning algorithms to expedite their screening procedures.\autocite{Fernandez_2013,Simon_2015,Rosen_2021} Current screening strategies predominantly rely on computational tools that are better suited for single-structure studies rather than high-throughput screenings. Moreover, in the industrial process of PSA introduced earlier and other similar technologies, multiple variables are necessary to fully assess performance, including selectivity, working capacity, and the kinetics and thermodynamics associated with material regeneration (i.e., unloading the pores for another cycle).\autocite{Kumar_1994} This thesis aims to address both of these challenges by designing more efficient tools for high-throughput screening, encompassing not only the most commonly studied selectivity performance metric but also transport properties and other relevant factors. 
 
@@ -20,9 +20,9 @@ The number of nanoporous materials is potentially unlimited; for the metal--orga
     \pgfornament[width=6cm,color=CTsemi]{88}
 \end{center}
 
-This manuscript begins with a literature review on the screening methodologies applied to various applications of nanoporous materials. The different techniques used in a variety of research fields are explored to inspire the current work.\autocite{Ren_2022} For instance, the research focus will be oriented towards the screening of the separation process by breaking down the selectivity metric into thermodynamic quantities such as the enthalpy, the free energy and the entropy. This study, which is based on time-consuming calculations, revealed the effects of pressure, the thermodynamic nature of selectivity and certain structure--property relationships.\autocite{Ren_2021} To further improve selectivity screening for Xe/Kr separation, various simulation tools were introduced to evaluate the adsorption performance of a nanoporous material.\autocite{Ren_2023} This has opened up new possibilities for developing computationally cheaper and more accurate energy descriptors for the ML prediction of Xe/Kr selectivity at ambient pressure.\autocite{Ren_2023_ml} Through this work, faster and more accurate evaluation tools for Xe/Kr separation have been developed, potentially enabling the improvement of the physical description of the system. 
+This manuscript begins with a literature review on the screening methodologies applied to various applications of nanoporous materials. The different techniques used in the research fields of these materials are explored to inspire the current work.\autocite{Ren_2022} For instance, the research focus will be oriented towards the screening of the separation process by breaking down the selectivity metric into thermodynamic quantities such as the enthalpy, the free energy and the entropy. This study, which is based on time-consuming calculations, revealed the effects of pressure, the thermodynamic nature of selectivity and certain structure--property relationships.\autocite{Ren_2021} To further improve selectivity screening for Xe/Kr separation, various simulation tools were introduced to evaluate the adsorption performance of a nanoporous material.\autocite{Ren_2023} This has opened up new possibilities for developing computationally cheaper and more accurate energy descriptors for the ML prediction of Xe/Kr selectivity at ambient pressure.\autocite{Ren_2023_ml} Through this work, faster and more accurate evaluation tools for Xe/Kr separation have been developed, potentially enabling the improvement of the physical description of the system. 
 
-As previously mentioned, the gas capacity of the nanoporous materials and the transport properties within them are crucial metrics for evaluating the industrial separation process. The gas capacity can be obtained through GCMC calculations, and alternative methodologies were not thoroughly studied in this thesis. Instead, the fifth chapter of this thesis focuses on determining transport properties and alternative methods of evaluation. Finally, the final chapter provides some perspectives on the physical description of the system (flexibility and polarizability).
+As previously mentioned, the gas capacity of the nanoporous materials and the transport properties within them are crucial metrics for evaluating the industrial separation process. The gas capacity can be obtained through GCMC calculations, and alternative methodologies were not thoroughly studied in this thesis. Instead, the fifth chapter focuses on determining transport properties and alternative methods of evaluation. Finally, my PhD work is based on simplifying modeling hypotheses that could be improved, the final chapter provides some perspectives on better physical description of the system (e.g., flexibility of the framework and the polarization intermolecular interactions).
 
 
 \vfill
